# soprano

./: .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  Package.swift  README.md  dev.sh  index.html  install.sh  package-lock.json  package.json  run.sh
.superpowers/sdd/: task-3-report.md
Sources/Soprano/: main.swift
Support/: Info.plist
Support/AgentHooks/: claude-settings.json  codex-hooks.json
Tests/Signing/: LocalCodeSigningTests.sh
Tests/SopranoTests/: AgentManagerPaneTests.swift  BrowserIntegrationTests.swift  ClipboardConfirmationCoordinatorTests.swift  DefaultKeybindingsTests.swift  ExternalEventRoutingTests.swift  MainWindowSizingTests.swift  PackagedResourceLookupTests.swift  PaneDepthTests.swift  PaneNavigationClaimRegistryTests.swift  SessionPersistenceTests.swift  SettingsEditingTests.swift  SettingsWindowTransitionTests.swift  SidebarPaneDepthTests.swift  SplitNodeTests.swift  TerminalCopyModeTests.swift  TerminalDropContentTests.swift  TerminalInputMetadataTests.swift  TerminalLifecycleTests.swift  ThemedSplitViewTests.swift  WorkspaceRestoreTests.swift
scripts/: ensure-local-signing-identity.sh  package-app.sh  sign-app.sh
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/components/: AgentHeader.tsx  AgentIcon.tsx  BrowserPane.tsx  CommandPalette.tsx  PaneTabBar.tsx  SettingsPage.tsx  Sidebar.tsx  StatusBar.tsx  TerminalPane.tsx  TilingLayout.tsx
src/config/: agents.ts  keybindings.ts  mcp.ts  settings.ts  themes.ts
(+68 files in other folders)
